quantum-game/qg-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quantum-game
  labels:
    app: quantum-game
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quantum-game
  template:
    metadata:
      labels:
        app: quantum-game
    spec:
      containers:
      - name: quantum-game
        image: spkane/quantum-game:latest
        resources:
          requests:
            cpu: "250m"
            memory: "64Mi"
          limits:
            cpu: "500m"
            memory: "128Mi"
        ports:
        - containerPort: 8080
