quantum-game/qg-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: quantum-game
  labels:
    name: quantum-game
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: quantum-game
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantum-game-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: quantum-game
            port:
              number: 8080
